# MagnetClock

./: CMakeLists.txt  Constants.hpp  README.md  cuda_solver.cu  cuda_solver.cuh  graphmodule.cpp  graphmodule.hpp  mainloop.cpp  structs.h
